[modify]修改配置文件

--- a/taixinkanghu/src/main/res/layout/activity_faq.xml
+++ b/taixinkanghu/src/main/res/layout/activity_faq.xml
@@ -36,7 +36,7 @@
                 android:layout_marginRight="15dip"
                 android:layout_marginTop="15dip"
                 android:text="Q：你们平台上的护理员具备专业的护理资质吗？"
-                android:textColor="#ff2aa384"
+                android:textColor="@color/main_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@drawable/bg_order_rb">
+            android:background="@drawable/bg_bule_frame_all">
 
             <TextView
                 android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@drawable/bg_order_rb">
+            android:background="@drawable/bg_bule_frame_all">
 
             <TextView
                 android:layout_width="match_parent"
@@ -74,7 +74,7 @@
                 android:layout_marginRight="15dip"
                 android:layout_marginTop="15dip"
                 android:text="Q：你们平台上的护理员具备专业的护理资质吗？"
-                android:textColor="#ff2aa384"
+                android:textColor="@color/main_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -84,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@drawable/bg_order_rb">
+            android:background="@drawable/bg_bule_frame_all">
 
             <TextView
                 android:layout_width="match_parent"
@@ -102,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@drawable/bg_order_rb">
+            android:background="@drawable/bg_bule_frame_all">
 
             <TextView
                 android:layout_width="match_parent"
@@ -112,7 +112,7 @@
                 android:layout_marginRight="15dip"
                 android:layout_marginTop="15dip"
                 android:text="Q：你们平台上的护理员具备专业的护理资质吗？"
-                android:textColor="#ff2aa384"
+                android:textColor="@color/main_color"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -122,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:background="@drawable/bg_order_rb">
+            android:background="@drawable/bg_bule_frame_all">
 
             <TextView
                 android:layout_width="match_parent"
