--- a/taixinkanghu/src/main/res/layout/activity_my_setting.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_setting.xml
@@ -52,5 +52,5 @@
 
     </LinearLayout>
 
-    <include layout="@layout/item_rg_main"/>
+    <include layout="@layout/include_main_button"/>
 </LinearLayout>
