--- a/taixinkanghu/src/main/res/drawable/bg_order_btn.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_order_btn.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item>
                 <shape>
-                    <solid android:color="@color/divider_color" />
+                    <solid android:color="@color/main_color" />
                     <padding android:top="0.5dip" android:bottom="0.5dip" />
                 </shape>
             </item>
@@ -21,7 +21,7 @@
         <layer-list>
             <item>
                 <shape>
-                    <solid android:color="@color/divider_color" />
+                    <solid android:color="@color/main_color" />
                     <padding android:top="0.5dip" android:bottom="0.5dip" />
                 </shape>
             </item>
