--- a/taixinkanghu/src/main/res/layout/activity_appointment.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment.xml
@@ -82,7 +82,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dip"
-                android:background="#40000000" />
+                android:background="@color/divider_color" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,7 +110,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dip"
-                android:background="#40000000" />
+                android:background="@color/divider_color" />
 
             <!--<LinearLayout-->
             <!--android:layout_width="match_parent"-->
@@ -138,7 +138,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dip"
-                android:background="#40000000" />
+                android:background="@color/divider_color" />
 
 
             <LinearLayout
@@ -153,7 +153,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -186,7 +186,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -219,7 +219,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -252,7 +252,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -285,7 +285,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -318,7 +318,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -351,7 +351,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_all"
                     android:orientation="horizontal">
 
                     <TextView
@@ -508,9 +508,10 @@
 
         <Button
             android:id="@id/btn_goto_main"
-            android:layout_width="80dip"
+            android:layout_width="match_parent"
             android:layout_height="48.0dip"
             android:background="@drawable/bg_btn_main_color"
+            android:layout_weight="2"
             android:text="首页"
             android:textColor="#ffffffff"
             android:textSize="20.0sp" />
@@ -521,10 +522,10 @@
 
         <Button
             android:id="@id/btn_submit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="48.0dip"
-            android:layout_weight="1"
             android:background="@drawable/bg_btn_main_color"
+            android:layout_weight="1"
             android:text="确定预约"
             android:textColor="#ffffffff"
             android:textSize="20.0sp" />
