--- a/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
+++ b/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
@@ -36,8 +36,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="66.0dip"
-                    android:layout_weight="1"
                     android:layout_marginLeft="15dip"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="联系方式：" />
 
@@ -71,8 +71,6 @@
                     android:layout_marginLeft="15dip"
                     android:gravity="center_vertical"
                     android:text="问题反馈页面不够出色" />
-
-
             </LinearLayout>
         </LinearLayout>
 
@@ -80,27 +78,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48.0dip"
-            android:background="#20000000"
-            android:orientation="horizontal">
+            android:background="@color/main_color_mask"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="48.0dip"
-                android:layout_gravity="bottom"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="36.0dip"
+                android:orientation="horizontal"
+                android:paddingTop="10dip"
+                android:weightSum="1">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dip"
+                    android:layout_marginRight="20dip"
+                    android:layout_weight="0.87"
+                    android:background="#00000000"
+                    android:gravity="center_vertical"
+                    android:hint="意见反馈"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="16.0sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="20dip"
+                    android:background="@mipmap/img_plus"
+                    android:gravity="center_vertical"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dip"
                 android:layout_marginLeft="20dip"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="意见反馈"
-                android:textSize="16.0sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_marginRight="20dip"
-                android:background="@mipmap/img_plus"
-                android:gravity="center_vertical" />
-
+                android:background="@color/white"></View>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
