--- a/taixinkanghu/src/main/res/layout/activity_worker_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_worker_info.xml
@@ -200,7 +200,7 @@
                             android:layout_height="100.0dip"
                             android:layout_margin="15.0dip"
                             android:src="@mipmap/face_img"
-                            app:border_color="#ff33c5b8"
+                            app:border_color="@color/main_color"
                             app:border_width="1.0dip" />
                     </RelativeLayout>
 
@@ -794,8 +794,9 @@
 
             <Button
                 android:id="@id/btn_goto_main"
-                android:layout_width="60dip"
+                android:layout_width="match_parent"
                 android:layout_height="48.0dip"
+                android:layout_weight="2"
                 android:background="@drawable/bg_btn_main_color"
                 android:text="首页"
                 android:textColor="#ffffffff"
@@ -810,6 +811,7 @@
                 android:id="@id/btn_select"
                 android:layout_width="match_parent"
                 android:layout_height="48.0dip"
+                android:layout_weight="1"
                 android:background="@drawable/bg_btn_main_color"
                 android:text="选择"
                 android:textColor="#ffffffff"
