--- a/taixinkanghu/src/main/res/layout/fragment_select_date.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_date.xml
@@ -54,7 +54,7 @@
         <com.taixinkanghu.widget.wheelview.WheelView
             android:id="@id/startWheelView"
             android:layout_width="70dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:layout_weight="1.0" />
 
         <View
@@ -65,7 +65,7 @@
         <com.taixinkanghu.widget.wheelview.WheelView
             android:id="@id/endWheelView"
             android:layout_width="70dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:layout_weight="1.0" />
 
     </LinearLayout>
@@ -133,5 +133,6 @@
         android:id="@id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#70000000" />
+        android:background="#70000000"
+        android:layout_weight="1" />
 </LinearLayout>
