--- a/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
@@ -11,8 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
+        android:layout_height="200dip"
         android:background="#fff"
         android:orientation="horizontal">
 
@@ -58,4 +57,12 @@
         android:text="重置"
         android:textColor="@color/text_color_black"
         android:textSize="14.0sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/mask"
+        android:layout_weight="1">
+
+    </LinearLayout>
 </LinearLayout>
