--- a/taixinkanghu/src/main/res/layout/item_order_info.xml
+++ b/taixinkanghu/src/main/res/layout/item_order_info.xml
@@ -68,7 +68,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0.5dip"
-            android:background="#99000000" />
+            android:background="@color/main_color" />
 
         <LinearLayout
             android:layout_width="match_parent"
