--- a/taixinkanghu/src/main/res/values/colors.xml
+++ b/taixinkanghu/src/main/res/values/colors.xml
@@ -7,9 +7,11 @@
     <color name="date_select_green_focus">#ff87e4bc</color>
     <color name="date_select_orange">#fffebf72</color>
     <color name="date_select_text">#ffa4aeb9</color>
-    <color name="divider_color">#ffd2d2d2</color>
+    <!--<color name="divider_color">#ffd2d2d2</color>-->
+    <color name="divider_color">#ff028df2</color>
     <color name="main_bg_color">#fff7f7f7</color>
     <color name="main_color">#ff028df2</color>
+    <color name="main_color_mask">#88028df2</color>
     <color name="main_color_disable">#ffcccccc</color>
     <color name="main_color_focus">#ff0383e1</color>
     <color name="tb_munion_item_force">#ffe3e3e3</color>
@@ -29,4 +31,6 @@
     <color name="list_back_ground">#ffffffff</color>
     <color name="white">#ffffffff</color>
     <color name="mask">#55000000</color>
+    <color name="all_null">#00000000</color>
+
 </resources>
