--- a/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
+++ b/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
@@ -3,7 +3,7 @@
     android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.taixinkanghu.app.ui.activity.ChooseWorkerActivity">
+    tools:context="com.taixinkanghu.app.ui.activity.ChooseNurseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
