--- a/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
+++ b/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
@@ -80,7 +80,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="@drawable/bg_order_rb"
+                    android:background="@drawable/bg_bule_frame_bottom"
                     android:orientation="horizontal">
 
                     <TextView
