--- a/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
@@ -27,7 +27,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="54.0dip"
                     android:layout_marginTop="10.0dip"
-                    android:background="@drawable/bg_order_btn"
+                    android:background="@drawable/bg_bule_frame"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -36,6 +36,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1.0"
                         android:text="筛选条件:"
+                        android:layout_marginLeft="15dip"
                         android:textColor="@color/text_color_black"
                         android:textSize="16.0sp" />
 
@@ -55,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10.0dip"
                         android:hint="V"
+                        android:layout_marginRight="15dip"
                         android:textColorHint="@color/text_color_gray"
                         android:textSize="18.0sp"
                         android:visibility="visible" />
