--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -4,13 +4,12 @@
     android:id="@+id/worker_btn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_bule_frame_all"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_order_rb"
+        android:background="@drawable/bg_worker_list"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
         android:orientation="horizontal"
