--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -56,7 +56,7 @@
                     android:rating="5" />
 
                 <TextView
-                    android:id="@id/price"
+                    android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="-5.0dip"
@@ -85,7 +85,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@id/age"
+                    android:id="@+id/age"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="31岁"
@@ -100,7 +100,7 @@
                     android:background="@color/divider_color" />
 
                 <TextView
-                    android:id="@id/province"
+                    android:id="@+id/province"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="吉林"
@@ -115,7 +115,7 @@
                     android:background="@color/divider_color" />
 
                 <TextView
-                    android:id="@id/workYear"
+                    android:id="@+id/workYear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2年护理经验"
@@ -130,7 +130,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@id/level_name"
+                    android:id="@+id/level_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10.0dip"
@@ -141,7 +141,7 @@
                     android:textSize="14.0sp" />
 
                 <TextView
-                    android:id="@id/inService"
+                    android:id="@+id/inService"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
